# snake

./: .gitignore  CMakeLists.txt  README.md
include/: globals.h  highscore.h  random_utils.h  snakectl.h
src/: highscore.cpp  main.cpp  random_utils.cpp  snakectl.cpp
